Fixed spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,15 +10,17 @@
   width: calc(100vw - 16.1rem);
   margin: {
     top: 6rem;
-    left: 16rem;
+    left: 16.1rem;
     bottom: 1rem;
+    right: auto;
   }
+  overflow: hidden;
 }
 .container-full {
-  width: calc(100vw - 6.1rem);
+  width: calc(100vw - 7rem);
   margin: {
     top: 6rem;
-    left: 6rem;
+    left: 7rem;
     bottom: 1rem;
   }
 }
@@ -28,8 +30,5 @@
     width: 80%;
     margin: 6rem auto;
     padding: 0rem;
-  }
-  .container-collapsed {
-    overflow: hidden;
   }
 }
